--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -57,22 +57,181 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add each prefix and suffix to remove to a list.\n",
+    "prefixes_suffixes = [\"Dr. \", \"Mr. \",\"Ms. \", \"Mrs. \", \"Miss \", \" MD\", \" DDS\", \" DVM\", \" PhD\"]\n",
+    "# Iterate through the words in the \"prefixes_suffixes\" list and replace them with an empty space, \"\".\n",
+    "for word in prefixes_suffixes:\n",
+    "    student_data_df[\"student_name\"] = student_data_df[\"student_name\"].str.replace(word,\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "dtype('int64')"
+       "39170"
       ]
      },
      "metadata": {},
-     "execution_count": 26
+     "execution_count": 30
     }
    ],
    "source": [
-    "school_data_df.budget.dtype"
+    "# Combine the data into a single dataset.\n",
+    "school_data_complete_df = pd.merge(student_data_df, school_data_df, on=[\"school_name\", \"school_name\"])\n",
+    "school_data_complete_df[\"school_name\"].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 46
+    }
+   ],
+   "source": [
+    "# Check that the number of unique schools in the merged data is 15\n",
+    "school_count = len(school_data_complete_df[\"school_name\"].unique())\n",
+    "school_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "All schools total budget: $ 24649428\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get total budget from school dataframe to reference later\n",
+    "total_budget = school_data_df[\"budget\"].sum()\n",
+    "print(\"All schools total budget: $\", total_budget)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "All schools average reading score:  81.87784018381414\nAll schools average math score:  78.98537145774827\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate average scores\n",
+    "average_reading_score = school_data_complete_df[\"reading_score\"].mean()\n",
+    "average_math_score = school_data_complete_df[\"math_score\"].mean()\n",
+    "print(\"All schools average reading score: \", average_reading_score)\n",
+    "print(\"All schools average math score: \", average_math_score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get all the students who are passing math and reading into new dataframes\n",
+    "passing_math = school_data_complete_df[school_data_complete_df[\"math_score\"] >= 70]\n",
+    "passing_reading = school_data_complete_df[school_data_complete_df[\"reading_score\"] >= 70]\n",
+    "# Count numbers of students passing math, and passing reading\n",
+    "passing_math_count = passing_math[\"student_name\"].count()\n",
+    "passing_reading_count = passing_reading[\"student_name\"].count()\n",
+    "# Count all students\n",
+    "student_count = school_data_complete_df[\"Student ID\"].count()\n",
+    "# Calculate passing percentage\n",
+    "passing_math_percentage = passing_math_count / float(student_count) * 100\n",
+    "passing_reading_percentage = passing_reading_count / float(student_count) * 100\n",
+    "# Create dataframe of students who passed both math and reading\n",
+    "passing_math_reading = school_data_complete_df[(school_data_complete_df[\"math_score\"] >= 70) & (school_data_complete_df[\"reading_score\"] >= 70)]\n",
+    "overall_passing_math_reading_count = passing_math_reading[\"student_name\"].count()\n",
+    "# Calculate the overall passing percentage.\n",
+    "overall_passing_percentage = overall_passing_math_reading_count / student_count * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "   Total Schools Total Students    Total Budget Average Math Score  \\\n",
+       "0             15         39,170  $24,649,428.00                 79   \n",
+       "\n",
+       "  Average Reading Score % Passing Math % Passing Reading % Overall Passing  \n",
+       "0                  81.9            75%               86%               65%  "
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Total Schools</th>\n      <th>Total Students</th>\n      <th>Total Budget</th>\n      <th>Average Math Score</th>\n      <th>Average Reading Score</th>\n      <th>% Passing Math</th>\n      <th>% Passing Reading</th>\n      <th>% Overall Passing</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>15</td>\n      <td>39,170</td>\n      <td>$24,649,428.00</td>\n      <td>79</td>\n      <td>81.9</td>\n      <td>75%</td>\n      <td>86%</td>\n      <td>65%</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 53
+    }
+   ],
+   "source": [
+    "# Create district summary dataframe\n",
+    "district_summary_df = pd.DataFrame(\n",
+    "    [{\"Total Schools\": school_count,\n",
+    "    \"Total Students\": student_count,\n",
+    "    \"Total Budget\": total_budget,\n",
+    "    \"Average Math Score\": average_math_score,\n",
+    "    \"Average Reading Score\": average_reading_score,\n",
+    "    \"% Passing Math\": passing_math_percentage,\n",
+    "    \"% Passing Reading\": passing_reading_percentage,\n",
+    "    \"% Overall Passing\": overall_passing_percentage}]\n",
+    ")\n",
+    "# Format the \"Total Students\" to have the comma for a thousands separator.\n",
+    "district_summary_df[\"Total Students\"] = district_summary_df[\"Total Students\"].map(\"{:,}\".format)\n",
+    "# Format \"Total Budget\" to have the comma for a thousands separator, a decimal separator, and a \"$\".\n",
+    "district_summary_df[\"Total Budget\"] = district_summary_df[\"Total Budget\"].map(\"${:,.2f}\".format)\n",
+    "# Format reading score to tenths place\n",
+    "district_summary_df[\"Average Reading Score\"] = district_summary_df[\"Average Reading Score\"].map(\"{:.1f}\".format)\n",
+    "# Format math score to tenths place\n",
+    "district_summary_df[\"Average Math Score\"] = district_summary_df[\"Average Math Score\"].map(\"{:.0f}\".format)\n",
+    "# Format % passing reading to whole percentage\n",
+    "district_summary_df[\"% Passing Reading\"] = district_summary_df[\"% Passing Reading\"].map(\"{:.0f}%\".format)\n",
+    "# Format % passing math to nearest whole percentage\n",
+    "district_summary_df[\"% Passing Math\"] = district_summary_df[\"% Passing Math\"].map(\"{:.0f}%\".format)\n",
+    "# Format % overall passing to nearest whole percentage\n",
+    "district_summary_df[\"% Overall Passing\"] = district_summary_df[\"% Overall Passing\"].map(\"{:.0f}%\".format)\n",
+    "\n",
+    "# Reorder the columns in the order you want them to appear.\n",
+    "new_column_order = [\"Total Schools\", \"Total Students\", \"Total Budget\",\"Average Math Score\", \"Average Reading Score\", \"% Passing Math\", \"% Passing Reading\", \"% Overall Passing\"]\n",
+    "\n",
+    "# Assign district summary df the new column order.\n",
+    "district_summary_df = district_summary_df[new_column_order]\n",
+    "\n",
+    "# Display dataframe\n",
+    "district_summary_df"
    ]
   },
   {
