--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -236,6 +236,158 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "school_name\n",
+       "Bailey High School       54.642283\n",
+       "Cabrera High School      91.334769\n",
+       "Figueroa High School     53.204476\n",
+       "Ford High School         54.289887\n",
+       "Griffin High School      90.599455\n",
+       "Hernandez High School    53.527508\n",
+       "Holden High School       89.227166\n",
+       "Huang High School        53.513884\n",
+       "Johnson High School      53.539172\n",
+       "Pena High School         90.540541\n",
+       "Rodriguez High School    52.988247\n",
+       "Shelton High School      89.892107\n",
+       "Thomas High School       90.948012\n",
+       "Wilson High School       90.582567\n",
+       "Wright High School       90.333333\n",
+       "dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 65
+    }
+   ],
+   "source": [
+    "# Per School Analyses\n",
+    "# Get school types\n",
+    "per_school_types = school_data_df.set_index([\"school_name\"])[\"type\"]\n",
+    "# Add the per_school_types into a DataFrame for testing.\n",
+    "schools_df = pd.DataFrame(per_school_types)\n",
+    "\n",
+    "# Find per school student counts from school data df.\n",
+    "# Could also use: school_data_complete_df[\"school_name\"].value_counts()\n",
+    "per_school_counts = school_data_df.set_index([\"school_name\"])[\"size\"]\n",
+    "per_school_counts\n",
+    "\n",
+    "# Calculate the budget for each school\n",
+    "per_school_budget = school_data_df.set_index([\"school_name\"])[\"budget\"]\n",
+    "per_school_budget\n",
+    "\n",
+    "# Calculate the per capita spending.\n",
+    "per_school_capita = per_school_budget / per_school_counts\n",
+    "per_school_capita\n",
+    "\n",
+    "# Calculate the average math and reading scores for each school\n",
+    "per_school_math = school_data_complete_df.groupby([\"school_name\"]).mean()[\"math_score\"]\n",
+    "per_school_reading = school_data_complete_df.groupby([\"school_name\"]).mean()[\"reading_score\"]\n",
+    "per_school_math\n",
+    "\n",
+    "# Calculate the passing scores by creating a filtered DataFrame.\n",
+    "# First create a df of only students who passed math from all schools\n",
+    "per_school_passing_math = school_data_complete_df[(school_data_complete_df[\"math_score\"] >= 70)]\n",
+    "# Then count how many students are in the new df, grouping by school name\n",
+    "per_school_passing_math = per_school_passing_math.groupby([\"school_name\"]).count()[\"student_name\"]\n",
+    "# Lastly divide the number of students passing math by the total number of students (per school) and * 100 to get the percentage \n",
+    "per_school_passing_math = per_school_passing_math / per_school_counts * 100\n",
+    "\n",
+    "# Repeat to get per school reading percentage\n",
+    "per_school_passing_reading = school_data_complete_df[(school_data_complete_df[\"reading_score\"] >= 70)]\n",
+    "per_school_passing_reading = per_school_passing_reading.groupby([\"school_name\"]).count()[\"student_name\"]\n",
+    "per_school_passing_reading = per_school_passing_reading / per_school_counts * 100\n",
+    "\n",
+    "# Repeat to get per school overall passing percentage.\n",
+    "per_passing_math_reading = school_data_complete_df[(school_data_complete_df[\"math_score\"] >= 70) & (school_data_complete_df[\"reading_score\"] >= 70)]\n",
+    "per_passing_math_reading = per_passing_math_reading.groupby([\"school_name\"]).count()[\"student_name\"]\n",
+    "per_overall_passing_percentage = per_passing_math_reading / per_school_counts * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "                     School Type  Total Students Total School Budget  \\\n",
+       "school_name                                                            \n",
+       "Bailey High School      District            4976       $3,124,928.00   \n",
+       "Cabrera High School      Charter            1858       $1,081,356.00   \n",
+       "Figueroa High School    District            2949       $1,884,411.00   \n",
+       "Ford High School        District            2739       $1,763,916.00   \n",
+       "Griffin High School      Charter            1468         $917,500.00   \n",
+       "\n",
+       "                     Per Student Budget Average Math Score  \\\n",
+       "school_name                                                  \n",
+       "Bailey High School              $628.00               77.0   \n",
+       "Cabrera High School             $582.00               83.1   \n",
+       "Figueroa High School            $639.00               76.7   \n",
+       "Ford High School                $644.00               77.1   \n",
+       "Griffin High School             $625.00               83.4   \n",
+       "\n",
+       "                     Average Reading Score % Passing Math % Passing Reading  \\\n",
+       "school_name                                                                   \n",
+       "Bailey High School                    81.0            67%               82%   \n",
+       "Cabrera High School                   84.0            94%               97%   \n",
+       "Figueroa High School                  81.2            66%               81%   \n",
+       "Ford High School                      80.7            68%               79%   \n",
+       "Griffin High School                   83.8            93%               97%   \n",
+       "\n",
+       "                     % Overall Passing  \n",
+       "school_name                             \n",
+       "Bailey High School                 55%  \n",
+       "Cabrera High School                91%  \n",
+       "Figueroa High School               53%  \n",
+       "Ford High School                   54%  \n",
+       "Griffin High School                91%  "
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>School Type</th>\n      <th>Total Students</th>\n      <th>Total School Budget</th>\n      <th>Per Student Budget</th>\n      <th>Average Math Score</th>\n      <th>Average Reading Score</th>\n      <th>% Passing Math</th>\n      <th>% Passing Reading</th>\n      <th>% Overall Passing</th>\n    </tr>\n    <tr>\n      <th>school_name</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>Bailey High School</th>\n      <td>District</td>\n      <td>4976</td>\n      <td>$3,124,928.00</td>\n      <td>$628.00</td>\n      <td>77.0</td>\n      <td>81.0</td>\n      <td>67%</td>\n      <td>82%</td>\n      <td>55%</td>\n    </tr>\n    <tr>\n      <th>Cabrera High School</th>\n      <td>Charter</td>\n      <td>1858</td>\n      <td>$1,081,356.00</td>\n      <td>$582.00</td>\n      <td>83.1</td>\n      <td>84.0</td>\n      <td>94%</td>\n      <td>97%</td>\n      <td>91%</td>\n    </tr>\n    <tr>\n      <th>Figueroa High School</th>\n      <td>District</td>\n      <td>2949</td>\n      <td>$1,884,411.00</td>\n      <td>$639.00</td>\n      <td>76.7</td>\n      <td>81.2</td>\n      <td>66%</td>\n      <td>81%</td>\n      <td>53%</td>\n    </tr>\n    <tr>\n      <th>Ford High School</th>\n      <td>District</td>\n      <td>2739</td>\n      <td>$1,763,916.00</td>\n      <td>$644.00</td>\n      <td>77.1</td>\n      <td>80.7</td>\n      <td>68%</td>\n      <td>79%</td>\n      <td>54%</td>\n    </tr>\n    <tr>\n      <th>Griffin High School</th>\n      <td>Charter</td>\n      <td>1468</td>\n      <td>$917,500.00</td>\n      <td>$625.00</td>\n      <td>83.4</td>\n      <td>83.8</td>\n      <td>93%</td>\n      <td>97%</td>\n      <td>91%</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 70
+    }
+   ],
+   "source": [
+    "# Arrange results in output table\n",
+    "per_school_summary_df = pd.DataFrame({\n",
+    "    \"School Type\": per_school_types,\n",
+    "    \"Total Students\": per_school_counts,\n",
+    "    \"Total School Budget\": per_school_budget,\n",
+    "    \"Per Student Budget\": per_school_capita,\n",
+    "    \"Average Math Score\": per_school_math,\n",
+    "    \"Average Reading Score\": per_school_reading,\n",
+    "    \"% Passing Math\": per_school_passing_math,\n",
+    "    \"% Passing Reading\": per_school_passing_reading,\n",
+    "    \"% Overall Passing\": per_overall_passing_percentage})\n",
+    "\n",
+    "# Format total and per student budgets to include $, thousandths separator, and round to the hundredths place.\n",
+    "per_school_summary_df[\"Total School Budget\"] = per_school_summary_df[\"Total School Budget\"].map(\"${:,.2f}\".format)\n",
+    "per_school_summary_df[\"Per Student Budget\"] = per_school_summary_df[\"Per Student Budget\"].map(\"${:,.2f}\".format)\n",
+    "\n",
+    "# Format average scores to round to tenths place\n",
+    "per_school_summary_df[\"Average Math Score\"] = per_school_summary_df[\"Average Math Score\"].map(\"{:.1f}\".format)\n",
+    "per_school_summary_df[\"Average Reading Score\"] = per_school_summary_df[\"Average Reading Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "# Format math, reading, overall passing percents to be whole percentages\n",
+    "per_school_summary_df[\"% Passing Math\"] = per_school_summary_df[\"% Passing Math\"].map(\"{:.0f}%\".format)\n",
+    "per_school_summary_df[\"% Passing Reading\"] = per_school_summary_df[\"% Passing Reading\"].map(\"{:.0f}%\".format)\n",
+    "per_school_summary_df[\"% Overall Passing\"] = per_school_summary_df[\"% Overall Passing\"].map(\"{:.0f}%\".format)\n",
+    "\n",
+    "per_school_summary_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
